--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="details-container color-container">
           <div class="article-container">
             <img
-              src="/assets/project-1.png"
+              src="assets/project-1.png"
               alt="Project 1 image"
               class="project-img"
             />
@@ -332,8 +332,8 @@
         <div class="all-projects-container">
           <div class="article-container">
             <img
-              src="/assets/project-all.png"
-              alt="Project 1 image"
+              src="assets/project-all.png"
+              alt="All Projects image"
               class="project-img"
             />
           <h2 class="skills-sub-title project-title">Browse All Projects</h2>
